fixed home background image flicker
changed to using cover.

--- a/css/sass/modules/_parallax.scss
+++ b/css/sass/modules/_parallax.scss
@@ -4,8 +4,11 @@
 }
 
 #bg-home {
-    height: 100%; 
-    background: url("../img/eggs1.jpg");
+    background: url(../img/eggs1.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;    
 }
 
 #bg-services,
